--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0",
+    "react-typing-effect": "^2.0.5",
     "select": "^1.1.2",
     "shadcn": "^2.1.2",
     "tailwind-merge": "^2.5.4",
