--- a/client/package.json
+++ b/client/package.json
@@ -31,7 +31,8 @@
     "select": "^1.1.2",
     "shadcn": "^2.1.2",
     "tailwind-merge": "^2.5.4",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zustand": "^5.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
