--- a/client/package.json
+++ b/client/package.json
@@ -32,6 +32,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.27.0",
+    "react-spring": "^9.7.4",
     "react-typing-effect": "^2.0.5",
     "select": "^1.1.2",
     "shadcn": "^2.1.2",
