--- a/client/package.json
+++ b/client/package.json
@@ -31,7 +31,9 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^6.27.0",
+    "react-spinners": "^0.14.1",
     "react-spring": "^9.7.4",
     "react-typing-effect": "^2.0.5",
     "select": "^1.1.2",
