--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
 	"author": "",
 	"type": "module",
 	"license": "ISC",
+	"engines": {
+    "node": "20.x"
+  },
 	"dependencies": {
 		"@supabase/supabase-js": "^2.46.1",
 		"bcryptjs": "^2.4.3",
