--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 	"scripts": {
 		"dev": "cross-env NODE_ENV=development nodemon server/server.js",
 		"start": "cross-env NODE_ENV=production node server/server.js",
-		"build": "npm install && npm run build --prefix client"
+		"build": "npm install && npm install --prefix client && npm run build --prefix client"
 	},
 	"keywords": [],
 	"author": "",
@@ -30,7 +30,7 @@
 		"mailtrap": "^3.4.0",
 		"mongoose": "^8.5.2",
 		"multer": "^1.4.5-lts.1",
-		"node-fetch": "^3.3.2",
+		"node-fetch": "^2.7.0",
 		"supabase": "^1.207.9"
 	},
 	"devDependencies": {
