--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
   "description": "",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "@supabase/supabase-js": "^2.18.0",
     "node-fetch": "^2.6.7",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.7",
