--- a/server/package.json
+++ b/server/package.json
@@ -10,9 +10,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@supabase/supabase-js": "^2.46.1",
     "bcrypt": "^5.1.1",
-    "@supabase/supabase-js": "^2.18.0",
-    "node-fetch": "^2.6.7",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
@@ -22,6 +21,8 @@
     "jsonwebtoken": "^9.0.2",
     "mailtrap": "^3.4.0",
     "mongoose": "^8.7.3",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "node-fetch": "^2.6.7",
+    "tar": "^7.4.3"
   }
 }
