--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,6 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^6.1.6",
-    "node-fetch": "^2.6.7",
     "@mui/material": "^6.1.6",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-icons": "^1.3.0",
@@ -31,6 +30,7 @@
     "firebase": "^11.0.1",
     "input": "^1.0.1",
     "lucide-react": "^0.453.0",
+    "node-fetch": "^2.6.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
@@ -44,6 +44,7 @@
     "supabase": "^1.207.9",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
+    "tar": "^6.1.11", 
     "zustand": "^5.0.1"
   },
   "devDependencies": {
