--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 	"description": "",
 	"main": "server/server.js",
 	"scripts": {
+		  "postinstall": "echo 'Skipping postinstall'",
 		"dev": "cross-env NODE_ENV=development nodemon server/server.js",
 		"start": "cross-env NODE_ENV=production node server/server.js",
 		"build": "npm install && npm install --prefix client && npm run build --prefix client"
@@ -32,7 +33,7 @@
 		"multer": "^1.4.5-lts.1",
 		"node-fetch": "^2.7.0",
 		"supabase": "^1.207.9",
-		"tar": "^7.4.3"
+		"tar": "^6.1.11"
 	},
 	"devDependencies": {
 		"nodemon": "^3.1.4"
