--- a/package.json
+++ b/package.json
@@ -17,17 +17,21 @@
 		"node": "20.x"
 	},
 	"dependencies": {
+		"@supabase/storage-js": "^2.7.1",
 		"@supabase/supabase-js": "^2.46.1",
 		"agent-base": "^7.1.1",
 		"bcryptjs": "^2.4.3",
+		"buffer": "^6.0.3",
 		"cookie-parser": "^1.4.6",
 		"cors": "^2.8.5",
 		"cross-env": "^7.0.3",
+		"cross-fetch": "^4.0.0",
 		"crypto": "^1.0.1",
 		"dotenv": "^16.4.5",
 		"express": "^4.19.2",
 		"firebase": "^11.0.1",
 		"firebase-admin": "^12.7.0",
+		"https-proxy-agent": "^7.0.5",
 		"jsonwebtoken": "^9.0.2",
 		"mailtrap": "^3.4.0",
 		"mongoose": "^8.5.2",
