--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"cross-env": "^7.0.3",
 		"cross-fetch": "^4.0.0",
 		"crypto": "^1.0.1",
+		"crypto-browserify": "^3.12.1",
 		"dotenv": "^16.4.5",
 		"express": "^4.19.2",
 		"firebase": "^11.0.1",
