--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 	},
 	"dependencies": {
 		"@supabase/storage-js": "^2.7.1",
+		"mkdirp": "^3.0.1",
 		"@supabase/supabase-js": "^2.46.1",
 		"agent-base": "^6.0.2",
 		"bcryptjs": "^2.4.3",
@@ -48,7 +49,6 @@
 		"nodemon": "^3.1.4"
 	},
 	"resolutions": {
-		"agent-base": "6.0.2",
-		    "mkdirp": "^3.0.1"
+		"agent-base": "6.0.2"
 	}
 }
